<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity">
    <ImageView
            android:src="@drawable/label"
            android:layout_width="411dp"
            android:layout_height="170dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:scaleType="centerCrop"/>
    <ImageView
            android:src="@drawable/label2"
            android:layout_width="152dp"
            android:layout_height="219dp"
            android:id="@+id/imageView2"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/film_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/filmNameColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>
    <TextView
            android:text="@string/released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/dateOfRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    <TextView
            android:text="@string/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/trailer_btn"
            android:layout_width="136dp"
            android:layout_height="43dp"
            android:textStyle="bold"
            android:id="@+id/button2" app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>